CHROMIUM: ARM: dts: Enable SDIO interrupts for veyron
WiFi should be using SDIO interrupts.  Enable them.

BUG=chrome-os-partner:33201
TEST=WiFi speed is faster.

Change-Id: I36bbe91c2e4b17f6c5f80a44bf30372392f13ad2
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/232840
Reviewed-by: Alexandru Stan <amstan@chromium.org>

--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -282,6 +282,7 @@
 	broken-cd;
 	bus-width = <4>;
 	cap-sd-highspeed;
+	cap-sdio-irq;
 	card-external-vcc-supply = <&wifi_regulator>;
 	clocks = <&cru HCLK_SDIO0>, <&cru SCLK_SDIO0>, <&rk808 RK808_CLKOUT1>;
 	clock-names = "biu", "ciu", "card_ext_clock";
