CHROMIUM: ARM: dts: Set the right clock freqs for rk3288 i2c
All the busses except i2c2 and i2c5 should be able to support 400kHz.
Set that as the speed.  We'll also set the i2c5 bus to be explicitly
100kHz to avoid a warning at bootup.

BUG=chrome-os-partner:34207
TEST=Audio still works, trackpad still works, tpm still works, tp work
TEST=Probe on scope

Change-Id: Iabce0aa5f7d027dfd3482d28189938174da11fda
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/233494
Reviewed-by: Alexandru Stan <amstan@chromium.org>

--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -373,8 +373,9 @@
 };
 
 &i2c0 {
-	clock-frequency = <400000>;
 	status = "okay";
+
+	clock-frequency = <400000>;
 
 	rk808: pmic@1b {
 		compatible = "rockchip,rk808";
@@ -532,6 +533,8 @@
 &i2c1 {
 	status = "okay";
 
+	clock-frequency = <400000>;
+
 	tpm: tpm@20 {
 		compatible = "infineon,slb9645tt";
 		reg = <0x20>;
@@ -541,6 +544,9 @@
 
 &i2c2 {
 	status = "okay";
+
+	/* 100kHz since 4.7k resistors don't rise fast enough */
+	clock-frequency = <100000>;
 
 	max98090: max98090@10 {
 		compatible = "maxim,max98090";
@@ -554,11 +560,14 @@
 
 &i2c3 {
 	status = "okay";
+
+	clock-frequency = <400000>;
 };
 
 &i2c4 {
-	clock-frequency = <400000>;
 	status = "okay";
+
+	clock-frequency = <400000>;
 
 	trackpad@15 {
 		compatible = "elan,i2c_touchpad";
@@ -583,6 +592,8 @@
 
 &i2c5 {
 	status = "okay";
+
+	clock-frequency = <100000>;
 };
 
 &i2s {
