FROMLIST: Add wrappers for qfprom access via syscon
Syscon fits very well to access qfprom. This also means drivers which needs to
access qfprom have to talk to syscon and get regmap, offset, size and then do
regmap reads. This will be redone in every driver. Having a wrapper for
this would avoid code duplication and also provide higher level and
user friendly api for qfprom access.
This patch attempts to provide such a wrapper.

Advantages of this approch are:

- driver need not hardcode qfprom offsets or have soc specific
  compatible strings to determine the offset.
- access multiple qfprom resources which is tricky with standard
  syscon.
- no code duplication.
- light weight, single call.
- not a platform device driver level binding.
(from https://patchwork.kernel.org/patch/5707781/)

BUG=None
TEST=build/boot on storm succeded

Change-Id: I3020d17abaf20a6e2f34976910c379a040676a49
Signed-off-by: Srinivas Kandagatla <srinivas.kandagatla@linaro.org>
Signed-off-by: Narendran Rajan <nrajan@codeaurora.org>
Reviewed-on: https://chromium-review.googlesource.com/246451
Reviewed-by: Bryan Freed <bfreed@chromium.org>
Tested-by: Narendran M R <narendranmr@gmail.com>
Commit-Queue: Grant Grundler <grundler@chromium.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -15,3 +15,10 @@ config QCOM_TCSR
         help
           Say y here to enable TCSR support.  The TCSR provides control
           functions for various peripherals.
+
+config QCOM_QFPROM
+ tristate "QCOM QFPROM Interface"
+        depends on ARCH_QCOM && OF
+        help
+          Say y here to enable QFPROM support. The QFPROM provides access
+          functions for QFPROM data to rest of the drivers via syscon wrappers.
