CHROMIUM: ARM: dts: Correct SPI flash bus on Brain
Brain has SPI flash connected on bus 2, and nothing connected on
bus 0.

BUG=chrome-os-partner:34436
BRANCH=none
TEST=/dev/spidev2.0 shows up and flashrom works on Brain

Signed-off-by: David Hendricks <dhendrix@chromium.org>
Change-Id: Ic87db5dcfa1f61386ddb9b0e3c4884803bf7466f
Reviewed-on: https://chromium-review.googlesource.com/245615
Reviewed-by: Douglas Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/rk3288-brain-rev0.dts
+++ b/arch/arm/boot/dts/rk3288-brain-rev0.dts
@@ -62,8 +62,14 @@
 	status = "okay";
 };
 
-&spi0 {
+&spi2 {
 	status = "okay";
+
+	spiflash@0 {
+		compatible = "spidev";
+		spi-max-frequency = <50000000>;
+		reg = <0>;
+	};
 };
 
 &i2c0 {
