CHROMIUM: ARM: qcom: dts: Add qfprom compatibility
qfprom library provides convenience API to access imem regions.
Add compatibility to qfprom in imem node and also add stride index
to enable byte read

BUG=None
TEST=build/boot on storm

Change-Id: I18daddf4cf9463f82a76e878a9e4f01001dbd4b7
Signed-off-by: Narendran Rajan <nrajan@codeaurora.org>
Reviewed-on: https://chromium-review.googlesource.com/246453
Tested-by: Narendran M R <narendranmr@gmail.com>
Reviewed-by: Bryan Freed <bfreed@chromium.org>
Commit-Queue: Grant Grundler <grundler@chromium.org>

--- a/arch/arm/boot/dts/qcom-ipq8064.dtsi
+++ b/arch/arm/boot/dts/qcom-ipq8064.dtsi
@@ -198,10 +198,11 @@
 		};
 
 		imem: memory@700000 {
-			compatible = "qcom,imem-ipq8064", "syscon";
+			compatible = "qcom,qfprom", "syscon";
 			reg = <0x00700000 0x1000>;
 			#address-cells = <1>;
 			#size-cells = <1>;
+			stride = <1>;
 			ranges = <0x0 0x00700000 0x1000>;
 		};
 
