--- a/arch/arm/boot/dts/rk3288-danger-rev0.dts
+++ b/arch/arm/boot/dts/rk3288-danger-rev0.dts
@@ -16,6 +16,10 @@
 	compatible = "google,veyron-danger-rev0", "google,veyron-danger",
 	             "google,veyron", "rockchip,rk3288";
 
+	vcc33_sys: vcc33-sys {
+		vin-supply = <&vcc_5v>;
+	};
+
 	vcc33_io: vcc33_io {
 		compatible = "regulator-fixed";
 		regulator-name = "vcc33_io";
@@ -113,11 +117,6 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&vcc50_hdmi_en>;
 };
-
-&vcc33_sys {
-	vin-supply = <&vcc_5v>;
-};
-
 
 &edp {
 	pinctrl-names = "default";
