--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -245,6 +245,7 @@
 	disable-wp;
 	non-removable;
 	num-slots = <1>;
+	default-sample-phase = <90>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&emmc_clk &emmc_cmd &emmc_bus8 &emmc_deassert_reset>;
 	status = "okay";
@@ -266,6 +267,7 @@
 	keep-power-in-suspend;
 	non-removable;
 	num-slots = <1>;
+	default-sample-phase = <90>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&sdio0_clk &sdio0_cmd &sdio0_bus4>;
 	status = "okay";
@@ -284,6 +286,7 @@
 	card-detect-delay = <200>;
 	cd-gpios = <&gpio7 5 GPIO_ACTIVE_LOW>;
 	num-slots = <1>;
+	default-sample-phase = <90>;
 	status = "okay";
 	vmmc-supply = <&vcc33_sd>;
 	vqmmc-supply = <&vccio_sd>;
