--- a/arch/arm/boot/dts/rk3288-danger-rev0.dts
+++ b/arch/arm/boot/dts/rk3288-danger-rev0.dts
@@ -1,7 +1,7 @@
 /*
- * Google Veyron Jerry Rev 3+ board device tree source
+ * Google Veyron Danger Rev 0 board device tree source
  *
- * Copyright 2014 Google, Inc
+ * Copyright 2015 Google, Inc
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
